# telegram_bot_rpg

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AI_GUIDELINES.md  Dockerfile  QUICKSTART.md  README.MD  check_quality.ps1  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
.gemini/: REVIEW_GUIDELINES.md  SECURITY_GUIDELINES.md
.github/workflows/: ci.yml
.streamlit/: config.toml
app/core/: bot_factory.py  config.py  container.py  log_setup.py  loguru_setup.py  redis_client.py  settings.py
app/filters/: is_admin.py
app/handlers/: __init__.py  bug_report.py  commands.py  common_fsm_handlers.py
app/handlers/admin/: admin_menu.py
app/handlers/fsn_callback/: char_creation.py  lobby_character_selection.py  tutorial_game.py  tutorial_start.py
app/middlewares/: container_middleware.py  db_session_middleware.py
app/resources/fsm_states/: states.py
app/resources/game_data/: ability_data_struct.py  gift_library.py  hub_config.py  item_generation_rules.py  modifer_library.py  resource_library.py  skill_library.py  stats_formulas.py  stats_rules.py  world_config.py  xp_rules.py
app/resources/keyboards/: callback_data.py  combat_callback.py  inventory_callback.py  reply_kb.py  status_callback.py
app/resources/llm_data/: json_sheme.py  mode_preset.py
app/resources/models/: character_dto.py  user_dto.py
app/resources/schemas_dto/: character_dto.py  combat_source_dto.py  fsm_state_dto.py  item_dto.py  modifer_dto.py  modifier_dto.py  skill.py  user_dto.py
app/resources/texts/: buttons_callback.py  combat_flavor.py  lobby_text.py  profanity_list.py  ui_messages.py
app/services/: data_loader_service.py  report_service.py
app/services/core_service/: redis_key.py  redis_service.py
app/services/game_service/: arena_service.py  command_service.py  game_sync_service.py  game_world_service.py  hub_entry_service.py  login_service.py  matchmaking_service.py  menu_service.py  modifiers_calculator_service.py  regen_service.py  shard_template_reader.py  stats_aggregation_service.py
app/services/gemini_service/: gemini_service.py  gemini_service_build.py
app/services/helpers_module/: DTO_helper.py  callback_exceptions.py  data_loader_service.py  dto_helper.py  game_validator.py  helper_id_callback.py  tutorial_utils.py  universal_stub.py
app/services/ui_service/: base_service.py  character_skill_service.py  character_status_menu_service.py  character_status_service.py  command_service.py  lobby_service.py  lobbyservice.py  menu_service.py  navigation_service.py
apps/bot/: bot_container.py
apps/bot/core_client/: __init__.py  arena_client.py  auth_client.py  combat_rbc_client.py  exploration.py  inventory_client.py  lobby_client.py  onboarding_client.py  scenario_client.py  status_client.py
apps/bot/handlers/: __init__.py  bug_report.py  commands.py  common_fsm_handlers.py
apps/bot/middlewares/: container_middleware.py  db_session_middleware.py  throttling_middleware.py
apps/bot/resources/: hub_config.py
apps/bot/ui_service/: __init__.py  base_bot_orchestrator.py  base_service.py  command_service.py  hub_entry_service.py  lobby_service.py  (+5 more)
apps/game_core/: core_container.py
backend/: main.py  router.py
backend/core/: base_arq.py  config.py  database.py  exceptions.py  security.py
backend/dependencies/: base.py
common/core/: client.py  config.py  logger.py
common/schemas/: account_context.py  arena.py  enums.py  exploration.py  inventory.py  lobby.py  onboarding.py  response.py  scenario.py
database/: db.py  schema.py  session.py
database/db_contract/: i_characters_repo.py  i_inventory_repo.py  i_leaderboard_repo.py  i_modifiers_repo.py  i_skill_repo.py  i_symbiote_repo.py  i_users_repo.py  i_wallet_repo.py  i_world_repo.py
database/model_orm/: __init__.py  base.py  character.py  inventory.py  leaderboard.py  modifiers.py  skill.py  symbiote.py  user.py  world.py
database/repositories/: __init__.py
database/sql/: 001_create_tables.sql  002_create_indexes.sql  003_crate_trigers.sql  003_create_triggers.sql
deploy/: Dockerfile  docker-compose.yml
docs/: CONTEXT_MAP.md  CONTRIBUTING.md  DESIGN_DOC_HELPER.md  Design_Doc_Quest_Engine.md  Project_Roadmap.md  README.md  symbiote_name.md
docs/AI_instructions/: 01_ENGINE_ARCHITECT_PROTOCOL.md  AI_GUIDELINES.md  AI_REFACTOR_GUIDELINES.md
docs/architecture/: 00_INDEX.md  00_VERSION_CHANGELOG.md  README.md
docs/context_maps/: arena_1v1_flow.md  combat_system_flow.md  exploration_flow.md
docs/designer/: README.md
docs/dis_docs/: README.md
docs/idea/: DESIGN_DOC_HELPER.md  combat_arq_migration.md
docs/management/: CONTRIBUTING.md  Project_Roadmap.md  README.md
docs/structure_manifest/: architecture_v2_vision.md  navigation_standard.md
docs/task/: Implement_ContextAssembler.md  Monster_Taxonomy_and_Survival.md  Refactor_Combat_Finalization.md
docs/tech_debt/: 02_Status_Debt.md  03_Onboarding_Debt.md  04_Lobby_Debt.md  05_Combat_Debt.md  ARCH_REFACTOR_PLAN.md  CI_CD_Strategy.md  Microservices_Ideas.md
docs/temp_diagrams/: exchange_flow.md
docs/tusk/: 01_Monster_Builder_Concept.md  02_Item_Builder_Concept.md  CRITICAL_01_CORE_CLIENT_REFACTOR.md  Exploration_and_Encounters.md  Implement_Lazy_Loading_and_Redis_Schema.md  Refactor_Tutorial_System.md  Rifts_and_World_Events.md  Task_Risk_Reward_Implementation.md
game_client/telegram_bot/: app_telegram.py
scripts/: analyze_balance.py  clear_quest_cache.py  debug_monsters.py  debug_read_db.py  generate_tree.py  load_scenarios.py  reset_character_tables.py  seed_world_gen.py  validate_gamedata.py  validate_world.py
src/backend/: main.py  router.py
tests/: conftest.py
tests/integration/: test_arena_simulation.py  test_combat_flow.py  test_inventory_flow.py  test_lobby_flow.py  test_login_flow.py  test_navigation_flow.py  test_scenario_flow.py
tools/admin_dashboard/: app.py  ui_core.py
tusk/разработка мировой карты и генарация мира/: The Threat System.md  World Core Architecture.md  World Core Implementation.md  World Populator & Content Generation.md
(+2067 files in other folders)
