# ==============================================================================
# МОЙ КОНФИГ ПРОЕКТА (PYPROJECT.TOML)
# Здесь я храню настройки всех инструментов, чтобы не плодить кучу конфиг-файлов.
# ==============================================================================

# --- Основная информация о проекте ---
# (Полезно, если я захочу запаковать проект или для Poetry/PDM в будущем)
[project]
name = "telegram-bot-rpg"
version = "0.1.0"
description = "Моя крутая RPG в Телеграме"
requires-python = ">=3.11"
readme = "README.md"

# ==============================================================================
# НАСТРОЙКИ ЛИНТЕРА И ФОРМАТТЕРА (RUFF)
# Мой главный инструмент для чистоты кода. Заменяет Black, Flake8 и Isort.
# ==============================================================================
[tool.ruff]
# Указываю явно версию питона, чтобы Ruff понимал новые фичи (match/case и т.д.)
target-version = "py311"

# Длина строки. Ставлю 120, потому что у меня широкий монитор
# и я не люблю, когда код слишком часто переносится.
line-length = 120

# Какие папки я игнорирую (там чужой код или мусор)
exclude = [
    ".venv",
    "venv",
    "__pycache__",
    ".git",
    "dist",
    "build",
    "migrations",
]

[tool.ruff.lint]
# --- МОИ ПРАВИЛА ПРОВЕРКИ ---
# E, F - Базовые ошибки питона (как в Flake8)
# I    - Сортировка импортов (как в isort) — чтобы красота была в шапке файла
# N    - Нейминг (PEP 8 Naming) — чтобы я не называл классы с маленькой буквы
# UP   - PyUpgrade — подскажет, если я использую старый синтаксис, когда есть новый
# B    - Bugbear — находит неочевидные баги и плохие паттерны
# SIM  - Simplify — подскажет, где можно упростить код (например, убрать лишний else)
# BLE  - Blind Except — запретит мне писать просто 'except:', заставит ловить конкретные ошибки
# A    - Builtins — чтобы я случайно не назвал переменную 'list' или 'id'
select = ["E", "F", "I", "N", "UP", "B", "SIM", "BLE", "A"]

# Что я разрешаю игнорировать (если правило слишком душное)
ignore = [
    "B008",
    "E501",
]

# Разрешаю Ruff автоматически исправлять всё, что он может
fixable = ["ALL"]
unfixable = []

# --- Настройки сортировки импортов (Isort) ---
[tool.ruff.lint.isort]
# Я говорю Ruff, что папки 'app' и 'database' — это МОЙ код (First Party).
# Он будет отделять их от библиотек пустой строкой. Красота.
known-first-party = ["app", "database"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

# --- Настройки форматтера (замена Black) ---
[tool.ruff.format]
# Использую двойные кавычки везде. Так профессиональнее.
quote-style = "double"
# Отступы — пробелами (табы — зло).
indent-style = "space"
# Не менять окончания строк (пусть git сам разбирается с CRLF/LF).
line-ending = "auto"


# ==============================================================================
# НАСТРОЙКИ ПРОВЕРКИ ТИПОВ (MYPY)
# Мой строгий надзиратель. Не дает мне передавать строки туда, где нужны числа.
# ==============================================================================
[tool.mypy]
# Убрал "tests" из списка проверяемых файлов
files = ["apps", "main.py", "scripts", "tools"]
# Отключаем строгий режим (пока что)
strict = false

# Игнорируем отсутствие типов у библиотек (например, google-genai может не иметь стабов)
ignore_missing_imports = true

# Разрешаем переменные типа Any (иначе он ругается на каждый чих без типа)
disallow_any_generics = false

# Не требовать типов у ВСЕХ функций (уберет 50% ошибок [no-untyped-def])
disallow_untyped_defs = false

# Но проверять тело функций, даже если у них нет типов (важно для поиска багов)
check_untyped_defs = true

# Разрешить неявный Optional (уберет ошибки, где ты передаешь None, но не написал Optional)
no_implicit_optional = false

# Показывать коды ошибок (чтобы мы могли их гуглить)
show_error_codes = true


# ==============================================================================
# НАСТРОЙКИ ТЕСТОВ (PYTEST)
# На будущее, когда начну писать автотесты.
# ==============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = "."
asyncio_mode = "auto"
# 👇 ЭТА СТРОКА ОБЯЗАТЕЛЬНА 👇
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "class"
addopts = "-v"
